--- a/style.css
+++ b/style.css
@@ -45,9 +45,20 @@ button{
 
 .content {
     display: flex;
-    padding: 10px 18% 5%;
+    padding: 10px 18% 4%;
     gap: 10px;
     text-align: center;
+}
+
+.quote{
+    margin-bottom: 10px;/*remove this later*/
+    height: 202px;
+    background-color: rgb(192, 187, 187);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    padding: 10px 18% 4%;
 }
 
 .footer {
