--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ button{
 }
 
 .quote{
-    margin-bottom: 10px;/*remove this later*/
+    /*margin-bottom: 10px;remove this later*/
     height: 202px;
     background-color: rgb(192, 187, 187);
     display: flex;
@@ -59,6 +59,20 @@ button{
     justify-content: center;
     font-size: 35px;
     padding: 10px 18% 4%;
+}
+
+.blank{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+}
+
+.blue-rectangle{
+    text-align: center;
+    width: 50%;
+    background-color: rgb(91, 172, 199);
+    border-radius: 3px;
 }
 
 .footer {
