--- a/style.css
+++ b/style.css
@@ -12,14 +12,19 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 18%;
+    padding: 10px 19%;
+}
+
+.bigtext{
+    font-size: 42px; /*sets the font-size for this website is awesome*/
 }
 
 .awesome{
+    font-size: 20px;
     height: 35vh;
     background-color: rgb(20, 81, 122);
     display: flex;
-    padding: 10px 18%;
+    padding: 5px 18% 100px;
     justify-content: center;
     align-items: center;
 }
@@ -73,6 +78,8 @@ button{
     width: 50%;
     background-color: rgb(91, 172, 199);
     border-radius: 3px;
+    display: flex;
+    flex-direction: column;
 }
 
 .footer {
