--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
     align-items: center;
 }
 
-
 ul {
     display: flex;
     gap: 10px;
@@ -70,17 +69,20 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2%;
+    padding: 6%;
 }
 
 .blue-rectangle{
     text-align: center;
-    width: 50%;
+    width: 70%;
     background-color: rgb(91, 172, 199);
     border-radius: 3px;
     display: flex;
     flex-direction: column;
+    padding-bottom: 12px;
 }
+
+
 
 .footer {
     margin-top: auto;
